--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Web Fattah</title>
 </head>
 <body>
-<h1><center>Halo Semuanya</center></h1>
+<h1>Halo Semuanya</h1>
 <p>Disini saya membuat web sederhana</p>
 </body>
 </html>
