--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <body>
 <h1>Halo Semuanya</h1>
 <p>Disini saya membuat web sederhana</p>
+<br><br>
+<p>Saya bersama kucing oren di sini</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTabMTAk4VMv_I27FjqbCfoxHuMUbEKZnCCijKb8ZBGuw4eit_4IFWDafw&s=10">
 </body>
 </html>
