--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<DOCTYPE html>
 <html>
 <head>
 <title>Web Fattah</title>
+<style type="text/css">
+p{color:red}
+</style>
 </head>
 <body>
 <h1>Halo Semuanya</h1>
