--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 <title>Web Fattah</title>
 <style type="text/css">
-title{color:blue}
 p{color:red}
 </style>
 </head>
 <body>
-<h1>Halo Semuanya</h1>
+<h1 style="color:blue">Halo Semuanya</h1>
 <p>Disini saya membuat web sederhana</p>
 <br><br>
 <p>Saya bersama kucing abu di sini</p>
