--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
 <title>Web Fattah</title>
 <style type="text/css">
-p{color:red}
+<style>
+        body {
+            width: 65%;
+            height: auto;
+            background: white;
+            margin:auto;
+            margin-top: 5px;
+            padding-bottom: 5px;
+        }
+
+        p {
+            text-align: center;
+            font-size: x-large;
+            margin:auto;
 </style>
 </head>
 <body>
