--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </style>
 </head>
 <body>
-<h1 style="color:blue">Halo Semuanya</h1>
+<h1>Halo Semuanya</h1>
 <p>Disini saya membuat web sederhana</p>
 <br><br>
 <p>Saya bersama kucing abu di sini</p>
