--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <p>Disini saya membuat web sederhana</p>
 <br><br>
 <p>Saya bersama kucing abu di sini</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTabMTAk4VMv_I27FjqbCfoxHuMUbEKZnCCijKb8ZBGuw4eit_4IFWDafw&s=10">
+<center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTabMTAk4VMv_I27FjqbCfoxHuMUbEKZnCCijKb8ZBGuw4eit_4IFWDafw&s=10"></center>
 </body>
 </html>
