--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <br><br>
 <p>Saya bersama kucing abu di sini</p>
 <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTabMTAk4VMv_I27FjqbCfoxHuMUbEKZnCCijKb8ZBGuw4eit_4IFWDafw&s=10"></center>
-<a href="https://id.m.wikipedia.org/wiki/Kucing">Lihat tentang kucing</a>
+<br>
+<center><a href="https://id.m.wikipedia.org/wiki/Kucing">Lihat tentang kucing</a></center>
 </body>
 </html>
