--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ footer p {
 </style>
 </head>
 <body>
+
 <div class="container">
         <div class="sidebar">
             <nav>
@@ -182,6 +183,13 @@ footer p {
                     <li><a href="">Contact</a></li>   
                 </ul>
             </nav>
+        </div>
+  <main class="content">
+              <section class="hero">
+              <div class="hero-content">
+<a href="" class="action-btn">Profile Saya</a>
+              </div>
+                </section>
         </div>
 <h1><center>Halo Semuanya</center></h1>
 <p>Disini saya membuat web sederhana</p>
