--- a/index.html
+++ b/index.html
@@ -187,16 +187,13 @@ footer p {
   <main class="content">
               <section class="hero">
               <div class="hero-content">
-<a href="" class="action-btn">Profile Saya</a>
+<a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://id.m.wikipedia.org/wiki/Kucing&ved=2ahUKEwi14uOS7OnzAhWRbX0KHWsUDiYQFnoECCEQAQ&usg=AOvVaw2VaFnldBcW6ILjVvusGAiG" class="action-btn">Kucing</a>
               </div>
                 </section>
         </div>
 <h1><center>Halo Semuanya</center></h1>
 <p>Disini saya membuat web sederhana</p>
-<br><br>
 <p>Saya bersama kucing abu di sini</p>
 <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTabMTAk4VMv_I27FjqbCfoxHuMUbEKZnCCijKb8ZBGuw4eit_4IFWDafw&s=10"></center>
-<br>
-<center><a href="https://id.m.wikipedia.org/wiki/Kucing">Lihat tentang kucing</a></center>
 </body>
 </html>
