--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ footer p {
         <div class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="">Contact</a></li>   
                 </ul>
             </nav>
