--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <h1>Contact Me</h1>
         <form>
             <label for="email">Email</label><br />
-            <input type="email" name="email" placeholder="alamat email"/>
+            <input type="email" name="email" placeholder="Alamat email"/>
             <br />
             <label for="message">Pesan</label><br />
             <textarea name="message" placeholder="Tulis pesan anda..." rows="4" cols="80"></textarea>
