--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ footer p {
         <div class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="">Contact</a></li>   
+                    <li><a href="">About</a></li>
+                    <li><a href="about.html">Contact</a></li>   
                 </ul>
             </nav>
         </div>
