--- a/about.html
+++ b/about.html
@@ -12,7 +12,11 @@
 
     <div>
         <h1>Contact Me</h1>
-        <form>
+        <br>
+        <p>Hubungi nomor ini jika ingin berkomunikasi lebih mudah</p>
+        <p>089524249095</p>
+        <br>
+    <form>
             <label for="email">Email</label><br />
             <input type="email" name="email" placeholder="Alamat email"/>
             <br />
